demo get role - set up nav, footer

--- a/Web_TraSua_API/Web_TraSua_BlazorWeb/Components/Layout/NavWeb.razor
+++ b/Web_TraSua_API/Web_TraSua_BlazorWeb/Components/Layout/NavWeb.razor
@@ -1,6 +1,4 @@
-﻿@inherits LayoutComponentBase
-
-<nav class="navbar navbar-expand-lg fixed-top bg-white">
+﻿<nav class="navbar navbar-expand-lg fixed-top bg-white">
     <div class="container" id="nav">
         <div class="col-md-4">
             <div>
@@ -56,73 +54,3 @@
         </div>
     </div>
 </nav>
-
-<main class="container" style="margin-top: 72px;">
-    @Body
-
-
-    <footer class="bg-F4F4F4 mt-96 color-1C1B1F">
-        <div class="col-md-10 row mx-auto pt-5 pb-4">
-            <div class="col-md-3">
-                <p class="text-black">DANH MỤC</p>
-                <p class="fs-14">
-                    Trà sữa
-                </p>
-                <p class="fs-14">
-                    Trà sữa
-                </p>
-                <p class="fs-14">
-                    Trà sữa
-                </p>
-                <p class="fs-14">
-                    Trà sữa
-                </p>
-            </div>
-            <div class="col-md-3">
-                <p class="text-black">BÀI VIẾT</p>
-                <p class="fs-14 ellipsis">
-                    Trà sữa
-                </p>
-                <p class="fs-14 ellipsis">
-                    Trà sữa
-                </p>
-                <p class="fs-14 ellipsis">
-                    Trà sữa
-                </p>
-                <p class="fs-14 ellipsis">
-                    Trà sữa
-                </p>
-            </div>
-            <div class="col-md-3">
-                <p class="text-black">CHĂM SÓC KHÁCH HÀNG</p>
-                <p class="fs-14">
-                    Đặt hàng và Thanh toán
-                </p>
-                <p class="fs-14">
-                    Vận chuyển
-                </p>
-                <p class="fs-14">
-                    Chất lượng sản phẩm
-                </p>
-                <p class="fs-14">
-                    Điều khoản và Điều kiện
-                </p>
-            </div>
-            <div class="col-md-3">
-                <p class="text-black">LIÊN HỆ</p>
-                <p class="fs-14">
-                    <i class="fa-solid fa-location-dot"></i>
-                    Địa chỉ: Phường Thường Thạnh, Quận Ninh Kiều, Thành phố Cần Thơ
-                </p>
-                <p class="fs-14">
-                    <i class="fa-solid fa-envelope"></i>
-                    Email: fivepearscontact@gmail.com
-                </p>
-                <p class="fs-14">
-                    <i class="fa-solid fa-phone"></i>
-                    Điện thoại: 0942 748 866
-                </p>
-            </div>
-        </div>
-    </footer>
-</main>
