--- a/Web_TraSua_API/Web_TraSua_BlazorWeb/Components/_Imports.razor
+++ b/Web_TraSua_API/Web_TraSua_BlazorWeb/Components/_Imports.razor
@@ -8,3 +8,6 @@
 @using Microsoft.JSInterop
 @using Web_TraSua_BlazorWeb
 @using Web_TraSua_BlazorWeb.Components
+@using Web_TraSua_BlazorWeb.Model
+@using Newtonsoft.Json
+@using System.Text
