--- a/Web_TraSua_API/Web_TraSua_BlazorWeb/Components/Layout/NavMenu.razor
+++ b/Web_TraSua_API/Web_TraSua_BlazorWeb/Components/Layout/NavMenu.razor
@@ -25,6 +25,11 @@
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="get">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Get
+            </NavLink>
+        </div>
     </nav>
 </div>
 
