--- a/Web_TraSua_API/Web_TraSua_BlazorWeb/Components/Pages/Roles/Get.razor
+++ b/Web_TraSua_API/Web_TraSua_BlazorWeb/Components/Pages/Roles/Get.razor
@@ -1,4 +1,5 @@
 ﻿@page "/get"
+@inject NavigationManager nv;
 
 <PageTitle>get role</PageTitle>
 <h3>Get</h3>
@@ -16,8 +17,8 @@
 </table>
 
 @code {
-    [Inject]
-    public NavigationManager NV { get; set; }
+    // [Inject]
+    // public NavigationManager NV { get; set; }
 
     string url = "http://localhost:29726/api/Roles";
 
